Fix focused list text contrast

--- a/src/vs/base/browser/ui/iconLabel/iconlabel.css
+++ b/src/vs/base/browser/ui/iconLabel/iconlabel.css
@@ -113,7 +113,7 @@
 	color: inherit !important;
 }
 
-.monaco-list-row.focused.selected .label-description,
+.monaco-list-row.focused .label-description,
 .monaco-list-row.selected .label-description {
-	opacity: .8;
+	opacity: 1;
 }
